[tool.poetry]
name = "iu9-coursework-2024"
version = "0.1.0"
description = ""
authors = ["darleet <darleet@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
manage-fastapi = "^1.1.1"
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
